# Renewal

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: build-system.md  spec-draft.md
include/renewal/: build.hpp  create_new.hpp  diagnostic.hpp  generator.hpp  manifest.hpp  manifest_parser.hpp  templates.hpp  toolchain.hpp  utils.hpp  validator.hpp  workspace.hpp
src/: CMakeLists.txt  build.cpp  create_new.cpp  generator.cpp  main.cpp  manifest_parser.cpp  toolchain.cpp  utils.cpp  validator.cpp  workspace.cpp
